<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp" />

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Service"
            android:textSize="18sp" />
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/service_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotReady"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">     
    
    <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="70dp"
        android:background="@drawable/edit"
	 />

    <Button
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edit"
    />
<LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"> 
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/syringe" 
        android:contentDescription="@string/ib_description1"/>
    <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/speed" 
        android:contentDescription="@string/ib_description2"/>

    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">     
    
    <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <Button
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="70dp"
        android:background="@drawable/edit" />

    <Button
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edit" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/needle_tubing" 
            android:contentDescription="@string/ib_description3"
            />
<Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/program" 
            android:contentDescription="@string/ib_description4"
            />
    </LinearLayout>
</RelativeLayout>

</LinearLayout>